chromeless fix
added scrollbars, hid footer

--- a/wp-content/mu-plugins/inc/chromeless.css
+++ b/wp-content/mu-plugins/inc/chromeless.css
@@ -1,4 +1,4 @@
-#adminmenuback, #adminmenuwrap, #wpadminbar, #footer, #screen-meta-links{display: none !important;}
+#adminmenuback, #adminmenuwrap, #wpadminbar, #footer, #wpfooter, #screen-meta-links{display: none !important;}
 #wpcontent{margin:0 20px !important;}
 #wpbody-content{padding-bottom: 20px !important}
 html.wp-toolbar{padding:0 !important;}
